--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,21 +6,17 @@
     position: relative;
     height: 50px;
   
-    /* * */
   }
   
   nav {
     position: fixed;
-  
-    /* * */
     width: 100%;
-  
-    /* * */
     height: 50px;
     background-color: #212121;
     z-index: 2;
-  
-    /* * */
+    a{
+    text-decoration: none;
+    }
   }
   
   .menu {
@@ -166,6 +162,11 @@
     font-size: 11px;
     font-weight: 300;
     text-transform: uppercase;
+
+      &_light{
+        background-color:#ffffff;
+        color:#000000
+      }
   }
   
   .title {
@@ -176,6 +177,24 @@
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
+
+      &_light{
+        color: #ffffff;
+        margin-top: 27px;
+      }
+  }
+
+  .subtitle{
+    margin-top: 5px;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 21px;
+    text-align: center;
+    color: #222222;
+    
+      &_light{
+        color: #ffffff;
+      }
   }
   
   .reasons .reasons_block {
@@ -213,3 +232,105 @@
       }
     }
   }
+
+  .mobile{
+    min-height: 864px;
+    padding: 46px 0 80px 0;
+    background: url('../img/bg/mobile_bg.png') center (center / cover) no-repeat;
+
+    .row{
+      margin-top: 30px;
+    }
+
+      &_block{
+        position: relative;
+        margin-bottom: 19px;
+        width: 320px;
+        height: 280px;
+          &_img_1{
+            background: url('../img/cards/1.png')
+          }  
+          &_img_2{
+              background: url('../img/cards/2.png')
+          }
+          &_img_3{
+            background: url('../img/cards/3.png')
+          }
+          &_img_4{
+            background: url('../img/cards/4.png')
+          }
+          &_img_5{
+            background: url('../img/cards/5.png')
+          }
+          &_img_6{
+            background: url('../img/cards/6.png')
+          }
+       
+          
+        &_text{
+          padding-top: 88px;
+          font-weight: 400;
+          font-size: 24px;
+          line-height: 31px;
+          text-align: center;
+          text-transform: uppercase;
+
+          color: #FFFFFF;
+        }
+        
+        &_plus{
+          position: absolute;
+          top: 217px;
+          left: 50%;
+          transform: translateX(-50%);
+          display: flex;
+          justify-content: center;
+          align-items:center;
+          padding: 7px;
+          width: 29px;
+          height: 29px;
+          background: #000000;
+          border-radius:100%;
+          cursor: pointer;
+          
+          img{
+            width: 70%;
+          }
+        }
+      
+      }
+        
+  }
+
+  .choise {
+    position: relative;
+    padding: 57px 0 137px 0;
+    height: 896px;
+    background: url('../img/bg/choise_light.png') center (center / cover) no-repeat;
+    z-index: -1;
+
+      &_dark{
+        position: absolute;
+        background: url('../img/bg/choise_dark.png') center (center / cover) no-repeat;
+        height: 500px;
+        width: 100%;
+        z-index: -1;
+        top: 0px;
+      }
+      &_img_car{
+        display: block;
+        margin: 0 auto;
+        margin-top: 54px;
+      }
+      &_descr{
+        display: block;
+        margin: 0 auto;
+        width: 327px;
+        height: 49px;
+        font-weight: 300;
+        font-size: 17px;
+        line-height: 24px;
+        color: #222222;
+        text-align: center;
+      }
+  } 
