--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -35,7 +35,7 @@ header {
   
     &_item {
       border-right: 2px dotted black;
-      padding-right: 28px;
+      padding-right: 28px;  
 
       &:last-child{
         border-right: none;
@@ -356,8 +356,8 @@ header {
   .choise {
     position: relative;
     padding: 57px 0 137px 0;
-    height: 896px;
-    background: url('../img/bg/choise_light.png') center (center / cover) no-repeat;
+    height: 898px;
+    background: url('../img/bg/mobile_bg.png') center (center / cover) no-repeat;
     z-index: -1;
   
     &_img {
@@ -365,7 +365,8 @@ header {
       display: block;
       margin: 0 auto;
       margin-top: 54px;
-      width: 100%;
+      width: 759px;
+      height: 480px;
       z-index: 2;
     }
 
@@ -373,7 +374,6 @@ header {
       position: absolute;
       height: 499px;
       width: 100%;
-      z-index: -1;
       top: 0;
       left: 0;
       background:#070716;
@@ -457,7 +457,10 @@ header {
     min-height: 717px;
     padding: 49px 0;
     background: url('../img/bg/world_bg.png') center (center / cover) no-repeat;
-  
+    
+      a{
+        text-decoration: none;
+      }
       &_btn{
         position: absolute;
         left: 50%;
@@ -542,6 +545,7 @@ header {
             font-size: 15px;
             font-weight: 300;
             text-transform: uppercase; 
+            text-decoration: none;
           }
         }
          &_sub {
@@ -553,6 +557,7 @@ header {
               font-size: 11px;
               font-weight: 300;
               text-transform: uppercase; 
+              text-decoration: none;
             }
         }
         &_lang {
@@ -564,6 +569,7 @@ header {
           margin-top: 19px;
           text-transform: uppercase;
           text-align: center; 
+          text-decoration: none;
         }
     }
         
